2004-10-14  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h: Detection of PGP text type
	* libseahorse/seahorse-util.c: Fixed seahorse_util_uri_get_last
	* libseahorse/seahorse-signatures.glade: Close properly
	* libseahorse/seahorse-widget.c: Fix so it doesn't crash on closing
	windows if no widget hashtable 
	* src/seahorse-delete.c:
	* src/seahorse-key-dialogs.h:
	* src/seahorse-key-properties.c:
	* src/seahorse-key-properties.glade:
	* src/seahorse-sign.c: Rework the key properties dialog
	(bug# 113363)
	
2004-10-13  Nate Nielsen <nielsen@memberwebs.com>
	
	* libseahorse/seahorse-key-store.c: Now respects 'encrypt to self' 
	option (bug# 111899)
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-context.h:
	* libseahorse/seahorse-signatures.c: Use a hashtable to speed lookups
	of keys to SeahorseKeys
	* libseahorse/seahorse-context.c:
	* libseahorse/seahorse-recipients.c:
	* src/seahorse-process-multiple.c: Proper use of ngettext
	* bonobo/Seahorse_PGP_File_Listener.server.in:
	* bonobo/seahorse-pgp-file-listener.c:
	* libseahorse/seahorse-libdialogs.h:
	* libseahorse/seahorse-op.c:
	* libseahorse/seahorse-op.h:
	* libseahorse/seahorse-signatures.c:
	* libseahorse/seahorse-signatures.glade:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/main.c:
	* src/Makefile.am:
	* src/seahorse-multi-encrypt.glade:
	* src/seahorse-process-multiple.c:
	* src/seahorse-windows.h: Multiple file support in nautilus including
	packaging (bug# 111118)
	* src/Makefile.am: Include neccessary druid headers 
	* bonobo/Seahorse_PGP_File_Listener.server.in:
	* plugins/nautilus/Makefile.am: 
	* plugins/nautilus/seahorse.xml:
	* seahorse.spec.in: Added proper support for nautilus mime types
	* libseahorse/seahorse-libdialogs.h:
	* libseahorse/seahorse-passphrase.c:
	* libseahorse/seahorse-util.c:
	* libseahorse/seahorse-util.h:
	* src/seahorse-key-op.c: Fixed inbuilt (non-agent) password prompting 