@@ -19,6 +19,9 @@ PKG_CHECK_MODULES(SEAHORSE, libgnomeui-2.0 libglade-2.0
 			    libbonobo-2.0 libbonoboui-2.0
 			    bonobo-activation-2.0 gnome-vfs-2.0)
 
+PLUGIN_LIBTOOL_FLAGS="-module -avoid-version"
+AC_SUBST(PLUGIN_LIBTOOL_FLAGS)
+
 dnl **************
 dnl GnuPG >= 1.2.x
 dnl **************
@@ -104,9 +107,24 @@ else
   AC_MSG_ERROR(GPGME $min_gpgme_version needed)
 fi
 
-
 SEAHORSE_CFLAGS="$SEAHORSE_CFLAGS $GPGME_CFLAGS -O0"
 SEAHORSE_LIBS="$SEAHORSE_LIBS $GPGME_LIBS"
+
+# But allow it to be disabled
+AC_ARG_ENABLE(gedit, 
+	    AC_HELP_STRING([--enable-gedit],
+	    [Compile gedit plugin]))
+
+AM_CONDITIONAL(WITH_GEDIT, test "$enable_gedit" != "no")
+
+# Gedit tests 
+if test "$enable_gedit" = "no"; then
+	echo "disabling gedit plugin"
+else
+	echo "enabling gedit plugin"
+	PKG_CHECK_MODULES(GEDIT, gedit-2.6 >= 2.6.0)
+	AC_SUBST(GEDIT_CFLAGS)
+fi
 
 # Debug mode
 AC_ARG_ENABLE(debug, 
@@ -154,4 +172,5 @@ pixmaps/Makefile
 src/Makefile
 plugins/Makefile
 plugins/nautilus/Makefile
+plugins/gedit/Makefile
 ])
