@@ -1,1 +1,8 @@
-SUBDIRS = nautilus
+
+if WITH_GEDIT
+GEDIT_DIR = gedit
+else
+GEDIT_DIR = 
+endif
+
+SUBDIRS = nautilus $(GEDIT_DIR)
