@@ -1,0 +1,7 @@
+*.la
+Makefile
+.deps
+.libs
+Makefile.in
+seahorse-pgp.gedit-plugin
+*.lo
