@@ -1,0 +1,6 @@
+[Gedit Plugin]
+Location=seahorse-pgp
+_Name=PGP Encryption
+_Description=The PGP encrypt plugin performs encryption operations on text.
+Author=Nate Nielsen <nielsen@memberwebs.com>
+Copyright=Copyright © 2004 Nate Nielsen
