@@ -13,6 +13,8 @@ libseahorse/seahorse-signatures.c
 libseahorse/seahorse-signatures.glade
 libseahorse/seahorse-util.c
 libseahorse/seahorse-validity.c
+plugins/gedit/seahorse-gedit.c
+plugins/gedit/seahorse-pgp.gedit-plugin.desktop.in
 plugins/nautilus/seahorse-pgp-preferences.c
 plugins/nautilus/seahorse-pgp-preferences.desktop.in
 plugins/nautilus/seahorse-pgp-preferences.glade
