@@ -1,3 +1,7 @@
+2004-10-14  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* POTFILES.in: Added plugins/gedit/
+	
 2004-10-14  Adam Weinberger  <adamw@gnome.org>
 
 	* en_CA.po: Updated Canadian English translation.
@@ -18,8 +22,8 @@
 
 	* en_CA.po: Updated Canadian English translation.
 
-2004-10-11  Nate Nielsen <nielsen@memberwebs.com>
-	
+2004-10-11 	Nate Nielsen <nielsen@memberwebs.com>
+
 	* POTFILES.in: Removed seahorse-import.glade, seahorse-export.glade
 	
 2004-10-10  Miloslav Trmac  <mitr@volny.cz>
