@@ -1,5 +1,12 @@
 2004-10-14  Nate Nielsen <nielsen@memberwebs.com>
 	
+	* plugins/Makefile.am:
+	* plugins/gedit/.cvsignore:
+	* plugins/gedit/Makefile.am:
+	* plugins/gedit/seahorse-gedit.c:
+	* plugins/gedit/seahorse-pgp.gedit-plugin.desktop.in:
+	* configure.in:
+	* seahorse.spec.in: Gedit plugin (bug# 110922)
 	* libseahorse/seahorse-util.c:
 	* libseahorse/seahorse-util.h: Detection of PGP text type
 	* libseahorse/seahorse-util.c: Fixed seahorse_util_uri_get_last
